<resources>
    <string name="app_name">Go Green</string>
    <string name="prg_dial_pleaseWait"> Please Wait</string>
    <!--login and signUp Activity-->
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="mobile">Mobile Number</string>
    <string name="name">NAME</string>
    <string name="login">LOGIN</string>
    <string name="signup"><u>SIGN UP</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="enteremail">Enter Your Email</string>
    <string name="enterphone">Enter Your Mobile Number</string>
    <string name="enterpassword">Enter Your Password</string>
    <string name="enterName">Enter Your Name</string>
    <string name="douwant"> Don\'t have an account?</string>
    <string name="title_activity_sign_in">ActivitySignIn</string>
    <string name="ok">ok</string>
    <string name="or">OR</string>

    <!--Alert-->
    <string name="alert_email">Please enter an email address.</string>
    <string name="alert_email_valid">Please enter a valid email format.</string>
    <string name="alert_password">Please enter the password.</string>
    <string name="password_length">Password length should be 6 to 16.</string>
    <string name="alert_name">Please enter a name.</string>
    <string name="alert_name_size">Name must contain atleast 3 characters.</string>
    <string name="alert_mobile">Please enter a mobile number.</string>
    <string name="alert_mobile_valid">Please enter a valid mobile  number.</string>
    <string name="alert_fill_deatil">Please enter your complete details. </string>
    <string name="alert_one_car">Select a car to buy a package.</string>
    <string name="alert_package_exist">Package already exist on this car. You can\'t delete it.</string>
    <string name="alert_interior_package">Interior package does not exist in your locality. </string>
    <string name="samePasswordAlert">Password does not match.</string>
    <string name="validOtp">Please enter the valid OTP.</string>
    <string name="alert_network">Please check your internet connection.</string>
    <string name="coupon_alert">Please enter a coupon.</string>
    <string name="apartment_alert">Please enter your apartment number.</string>
    <string name="carBrand_alert">Please select car brand.</string>
    <string name="carModel_alert">Please select car model.</string>
    <string name="carColor_alert">Please select car color.</string>
    <string name="carParking_alert">Please enter car parking number</string>
    <string name="carPlateNumber_alert">Please enter car plate number.</string>
    <string name="no_data">No data found.</string>
    <string name="expired_data_alert">Expired order does not exist.</string>
    <string name="active_data_alert">Active order does not exist.</string>


    <!--FgPassword-->
    <string name="alert_forgotPassword">Enter  your  email address and we\'ll send  you an link on your email to reset your password.
    </string>
    <string name="toolbar">Forgot Password</string>
    <string name="send">Send</string>

    <!--OTP Screen-->
    <string name="verify_number">Verify Your Number</string>
    <string name="sendtext">We have sent an OTP on your mobile number. Please enter the received OTP for validation.</string>
    <string name="number"> .</string>
    <string name="resendotp"><u>Resend OTP</u> </string>
    <string name="verify">Verify</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="wrongnumber">Wrong number?</string>
    <string name="enter_valid_otp">Please enter the valid OTP </string>


    <!--facebook Sdk-->
    <string name="facebook_app_id">1971536023139456</string>
    <string name="fb_login_protocol_scheme">fb1971536023139456</string>
    <string name="facebook_error">Something went wrong</string>
    <string name="VolleyError">Please check you internet connection and try again.</string>

    <!--City Activity-->
    <string name="Cityname">Dubai</string>
    <string name="serving">Serving</string>
    <string name="serving_no">50 </string>
    <string name="locality">Location</string>
    <string name="can_not_find">Can\'t Find Your City. </string>
    <string name="can_not_find_locality">Can\'t Find Your Location. </string>
    <string name="can_not_find_street">Can\'t Find Your Street. </string>
    <string name="click"><u>Click Here</u></string>
    <string name="search">search</string>
    <string name="city">City</string>
    <string name="locality_in">Location in</string>
    <string name="street_in">Street in</string>


    <!--how it work-->
    <string name="select_city">Select Your City</string>
    <string name="Confirm_order"> Confirm Your Order</string>
    <string name="aelect_locality"> Select Your Location</string>
    <string name="select_car"> Add Your Vehicles</string>
    <string name="Choose_package">Choose A Package</string>
    <string name="make_payment"> Choose Payment Option </string>
    <string name="subscribe">Continue</string>
    <string name="How_it_Work">How It Works</string>

    <!--Book Service-->
    <string name="proceed">Proceed</string>
    <string name="select_a_car">Select your Car</string>
    <string name="book_a_Service">Book A Service</string>
    <string name="car_name">Car Brand</string>
    <string name="car_color">Color</string>
    <string name="plate_number">Plate Number</string>
    <string name="Car_type">Saloon Car</string>
    <string name="Apartment_Number">Apartment Number</string>
    <string name="Apartment_Number_alert">Enter your apartment number</string>
    <string name="car_package_active">Active Package</string>
    <string name="package_active">Package already active on this car.</string>

    <!--Enter Car Detail-->
    <string name="select_type">Select Type</string>
    <string name="suv">SUV</string>
    <string name="Saloon">Saloon</string>
    <string name="car_plate_number"> CAR PLATE NUMBER</string>
    <string name="ENTER_CAR_PLATE_NUMBER">Enter your Car plate number</string>
    <string name="parking_Bay_number">PARKING BAY NUMBER</string>
    <string name="enter_parking_bay">Enter Your parking bay number</string>
    <string name="Enter_your_car_detail">Enter your car details</string>
    <string name="model">Car Model</string>
    <string name="brand">Car Brand</string>
    <string name="model_alert">Enter your car model</string>
    <string name="brand_alert">Enter your car Brand</string>

    <!--DashBoard-->
    <string name="done">Thank you for your order,your car service will commence shortly</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_car">My Cars</string>
    <string name="my_order">My orders</string>
    <string name="Faqs">FAQs</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="rate_us">Rate Us</string>
    <string name="change_password">Change Password</string>
    <string name="signOut">Sign Out</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="invt_friends">Invite Friends</string>
    <string name="user_name">User Name</string>
    <string name="user_number">User Number</string>
    <string name="user_email">User Email</string>
    <string name="choose_location">Choose your location</string>
    <string name="enterDAte">Please select the date.</string>
    <string name="date">Enter Date</string>

    <!--Order confirmation-->
    <string name="proceed1"><b>PROCEED</b></string>
    <string name="total_amount">Total Amount</string>
    <string name="rupee"> <b> 2000</b></string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="have_coupon"><u>Have a Coupon Code ?</u></string>
    <string name="viewMore">View More</string>
    <string name="viewLess">View Less</string>
    <string name="entercpnDetail">Enter the Coupon Detail</string>
    <string name="cpnCode">Coupon Code</string>
    <string name="entercpn">Enter Coupon Code</string>
    <string name="cpnCode1">Coupon Code :</string>

    <!--Book A Service Form-->
    <string name="selected_package">Selected  Package</string>
    <string name="money_back_gaurantee">100 % Money Back Guarantee(T&amp;C applies)</string>
    <string name="Selected_packeg_type">Selected Package Type</string>
    <string name="oneTime">One Time</string>
    <string name="monthly">Monthly</string>
    <string name="clr_service">Select Cleaning Service</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="slt_date">Select Date</string>
    <string name="svr_time">Service Timings</string>
    <string name="I_agree">I Agree To</string>
    <string name="terms"><u>Terms &amp; Conditions</u> </string>
    <string name="next">next</string>
    <string name="AED">AED</string>
    <string name="slt_frequency">Select Frequency</string>
    <string name="fill_detail">The following cars have incomplete details. Please provide complete details for all your cars to continue.</string>


    <!--Change Password-->
    <string name="enteroldpassword">Enter Your Old Password</string>
    <string name="enternewpassword">Enter Your New Password</string>
    <string name="enterconfirmpassword">Enter Your Confirm Password</string>
    <string name="oldpassword">OLD PASSWORD</string>
    <string name="newpassword">NEW PASSWORD</string>
    <string name="confirmpassword">CONFIRM PASSWORD</string>

    <!--Order Details-->
    <string name="packageType">Package Type</string>
    <string name="ServiceType">Service Date</string>
    <string name="expireON">Expires On</string>
    <string name="AmountPaid">Package Price</string>
    <string name="Package">Package</string>
    <string name="crew">Crew</string>
    <string name="activity">Activity</string>
    <string name="status">Status :</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="rate_review"><u>Rate &amp; Review</u> </string>
    <string name="payments">Payment Methods</string>
    <string name="order_detail">Order Details</string>
    <string name="my_orders">My Orders</string>
    <string name="cleaner_rated">Cleaner already rated.</string>
    <string name="feedback">  Please give us your feedback.</string>

    <string name="online_payment">  Do you want to make an online payment ?</string>
    <string name="offline_payment"> For Cash on Service orders we charge 5 AED extra. Do you want to continue?</string>
    Please give us your feedback

</resources>
