<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar_no_elevetion_with_green_back_arrow" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="4.9"
        android:padding="35dp"
        android:src="@mipmap/verify_design" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1.4"
        android:gravity="center"
        android:text="@string/verify_number"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/Size4" />

<LinearLayout
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_weight="1.9"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sendtext"
        android:textColor="@color/textcolor"
        android:textSize="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/Size3" />

        <TextView
            android:layout_marginStart="7dp"
            android:id="@+id/chagenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Size3"
            android:text="@string/wrongnumber"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>


</LinearLayout>

    <com.chaos.view.PinView
        android:id="@+id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:cursorVisible="true"
        android:elevation="1dp"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:cursorColor="@color/colorAccent"
        app:cursorWidth="1dp"
        app:itemCount="4"
        app:itemHeight="35dp"
        app:itemRadius="19dp"
        app:itemSpacing="13dp"
        app:itemWidth="60dp"
        app:lineColor="@color/textcolor"
        app:lineWidth="1dp"
        app:viewType="rectangle" />



    <TextView
        android:padding="1dp"
        android:id="@+id/resendOTP"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:layout_weight="1.35"
        android:layout_gravity="center"
        android:text="@string/resendotp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/Size3" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="@dimen/Size4" />


</LinearLayout>

