<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:elevation="5dp"
    android:translationZ="1dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="3dp">

    <RelativeLayout
        android:id="@+id/citylist_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/Cityname"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/Size4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_name"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size2" />

            <TextView
                android:layout_marginStart="2dp"
                android:id="@+id/serving_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_no"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size2" />

            <TextView
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locality"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size1" />

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>


</android.support.v7.widget.CardView>