<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Screens.LoginActivity">

    <!--<ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:padding="15dp"
            android:layout_marginTop="35dp"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_weight="6"
            android:src="@drawable/go_green_logo" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="2.8">

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@mipmap/email_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/Size2" />

                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/enteremail"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:textSize="@dimen/Size3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/email_layout"
                android:layout_marginTop="9dp"
                android:background="@color/viewcolor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="2.8">

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@mipmap/lock_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/Size2" />

                    <EditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/enterpassword"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:textSize="@dimen/Size3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/password_layout"
                android:layout_marginTop="9dp"
                android:background="@color/viewcolor" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:id="@+id/fgPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size3" />


        </LinearLayout>

        <Button

            android:id="@+id/user_login"
            android:layout_width="@dimen/_175sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/Size4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/or"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/Size4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">


            <ImageView
                android:id="@+id/fbButton"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="@dimen/_37sdp"
                android:src="@mipmap/fb_icon" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginFB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/gButton"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginStart="25dp"
                android:background="@mipmap/google_icon" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/douwant"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size3" />


            <TextView
                android:id="@+id/user_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/signup"
                android:textColor="@color/buttonstartcolor"
                android:textSize="@dimen/Size3" />


        </LinearLayout>

    </LinearLayout>
    <!-- </ScrollView>-->

</LinearLayout>