<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/myorderdrawale"
    tools:context=".Screens.SignUpActivity">


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/entercpnDetail"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/Size4" />


        <RelativeLayout

            android:id="@+id/mobile_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp">

            <LinearLayout

                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mobile_icon"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@mipmap/cupon_code" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cpnCode"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/Size2" />

                    <EditText
                        android:id="@+id/enter_coupon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/entercpn"
                        android:imeOptions="actionDone"
                        android:inputType="textCapCharacters"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/textcolor"
                        android:textColorHint="@color/textcolor"
                        android:textSize="@dimen/Size3" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/mobile_layout"
                android:layout_marginTop="9dp"
                android:background="@color/viewcolor" />

        </RelativeLayout>


        <Button

            android:id="@+id/dialog_ok"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_button"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/Size4" />
    </LinearLayout>


</LinearLayout>